Fix dropdowns overlapped #17918
Fix dropdowns  overlapped on the search box in Community library page in mobile web browser.

--- a/core/templates/pages/library-page/search-bar/search-bar.component.css
+++ b/core/templates/pages/library-page/search-bar/search-bar.component.css
@@ -203,8 +203,8 @@ oppia-search-bar .oppia-input-group.classroom-page-input-group {
     border-radius: 10px;
     color: #fff;
     height: 40px;
-    margin-left: 50px;
-    margin-top: -60px;
+    margin-left: -7px;
+    margin-top: 10px;
     max-width: none;
     padding: 8px 7px 0 6px;
     text-align: center;
